RESOLVED FIXED315476
Missing piece of moving NetworkProcessProxy ownership from WebProcessPool to WebsiteDataStore
https://bugs.webkit.org/show_bug.cgi?id=315476
Summary Missing piece of moving NetworkProcessProxy ownership from WebProcessPool to ...
rupin
Reported 2026-05-24 17:36:05 PDT
Missing piece of moving NetworkProcessProxy ownership from WebProcessPool to WebsiteDataStore
Attachments
Radar WebKit Bug Importer
Comment 1 2026-05-24 17:36:11 PDT
rupin
Comment 2 2026-05-24 17:43:05 PDT
EWS
Comment 3 2026-05-26 10:18:49 PDT
Committed 313897@main (e12eb74bccc2): <https://commits.webkit.org/313897@main> Reviewed commits have been landed. Closing PR #65586 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.