Missing piece of moving NetworkProcessProxy ownership from WebProcessPool to WebsiteDataStore https://bugs.webkit.org/show_bug.cgi?id=315476 rdar://177840736

Reviewed by Per Arne Vollan.

https://bugs.webkit.org/show_bug.cgi?id=216041 moved NetworkProcessProxy
ownership from WebProcessPool to WebsiteDataStore but forgot to delete a
few of the function declarations from WebProcessPool. So we remove them now.

* Source/WebKit/UIProcess/WebProcessPool.h:

Canonical link: https://commits.webkit.org/313897@main